# opsbox

./: .bashrc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .ruff.toml  .sops.yaml  Dockerfile.base  Makefile  README.md  alembic.ini  docker-compose.yaml  index.html  plan.txt  pyproject.toml  requirements.base.txt
.github/ISSUE_TEMPLATE/: task.md  task.yml
.github/workflows/: build-and-push.yaml  build-and-test.yaml  build.yaml  ci.yaml  deploy-and-test.yaml  deploy-and-test.yml  github-page.yaml  pre-commit.yaml
alembic/: env.py
api/: Dockerfile  Dockerfile.dev  entrypoint.sh  requirements.txt
api/app/: crud.py  database.py  main.py  models.py  opsbox.db  run_queue.py  schemas.py
configs/: .config.yaml
docs/: README-advanced-plan.md  README-basic-plan.md  README-handling-requests-limit-k8s.md  README-ingress.md  README-k8s-web.md  argo-rollout.md  create-custom-grafana-dashboards.md  note.txt
docs/k8s/: k8s_api.md
gitops/: application.yaml  argocd.values.yaml
shared/: pyproject.toml
shared/opsbox_common/: __init__.py  celery_app.py  database.py  models.py  settings.py
shared/opsbox_common.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
shared/opsbox_common/libs/: loggin.py
site/: architecture.html  cicd.html  links.html  observability.html  quickstart.html  security.html
tests/: conftest.py  test_tasks.py
web/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
worker/: .dockerignore  Dockerfile  requirements.txt
(+102 files in other folders)
